# dotcop

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  dotcop.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml  python-publish-testpypi.yml  python-publish.yml
conf/: dotcop.yaml  package_db.yaml
include/: cli_parser.h  config_loader.h  options.h
src/: cli_parser.cpp  main.cpp  options.cpp
src/dotcop/: cli.py  config.py  main.py  parser.py  setup.py
src/dotcop/app/: app.py
src/dotcop/command/: CommandHandler.py  command_handler.py
src/dotcop/command/commands/: ActivateCommand.py  CreateCommand.py  InstallCommand.py  ListCommand.py  RemoveCommand.py  StatusCommand.py
src/dotcop/config/: ConfigHandler.py  LoadConfigFile.py  ValidateConfigfile.py  ValidatePackagePath.py  load_config_file.py  load_db_file.py  load_manifest_dir.py  load_meta_dir  load_meta_dir.py
src/dotcop/core/: Linker.py  cli.py
src/dotcop/core/cli/: Parser.py
src/dotcop/core/cli/adapters/: AdapterHandler.py  status_adapter.py
src/dotcop/data/: load_dotcop_configuration.py
src/dotcop/handlers/: command_handler.py  config_handler.py
src/dotcop/utils/: formatter.py  logging_setup.py  root_finder.py
tests/: test_config.py  test_parser.py  test_setup.py
tests/utils/: test_formatter.py
